nvmeof-recoverer: fix synchronization issue with NvmeOfOSD resource
This commit improves the handling of NvmeOfOSD resources by modifying RBAC and adding client, lister, and informer. These changes ensure that NvmeOfOSD resources are properly synchronized.
- Modification of RBAC for proper get and update of NvmeOfOSD resources.
- Addition of client, lister, and informer for NvmeOfOSD resources.
- Implementation of WatchControllerPredicate to watch changes in NvmeOfOSD resources.

Signed-off-by: cheolho.kang <cheolho.kang@samsung.com>

--- a/deploy/examples/common.yaml
+++ b/deploy/examples/common.yaml
@@ -316,6 +316,7 @@ rules:
       - cephfilesystemsubvolumegroups
       - cephblockpoolradosnamespaces
       - cephcosidrivers
+      - nvmeofosds
     verbs:
       - get
       - list
@@ -341,6 +342,7 @@ rules:
       - cephfilesystemmirrors/status
       - cephfilesystemsubvolumegroups/status
       - cephblockpoolradosnamespaces/status
+      - nvmeofosds/status
     verbs: ["update"]
   # The "*/finalizers" permission may need to be strictly given for K8s clusters where
   # OwnerReferencesPermissionEnforcement is enabled so that Rook can set blockOwnerDeletion on
@@ -364,6 +366,7 @@ rules:
       - cephfilesystemmirrors/finalizers
       - cephfilesystemsubvolumegroups/finalizers
       - cephblockpoolradosnamespaces/finalizers
+      - nvmeofosds/finalizers
     verbs: ["update"]
   - apiGroups:
       - policy
