--- a/deploy/charts/rook-ceph/templates/clusterrole.yaml
+++ b/deploy/charts/rook-ceph/templates/clusterrole.yaml
@@ -145,6 +145,7 @@ rules:
   - cephfilesystemsubvolumegroups
   - cephblockpoolradosnamespaces
   - cephcosidrivers
+  - nvmeofosds
   verbs:
   - get
   - list
@@ -170,6 +171,7 @@ rules:
   - cephfilesystemmirrors/status
   - cephfilesystemsubvolumegroups/status
   - cephblockpoolradosnamespaces/status
+  - nvmeofosds/status
   verbs: ["update"]
 # The "*/finalizers" permission may need to be strictly given for K8s clusters where
 # OwnerReferencesPermissionEnforcement is enabled so that Rook can set blockOwnerDeletion on
@@ -193,6 +195,7 @@ rules:
   - cephfilesystemmirrors/finalizers
   - cephfilesystemsubvolumegroups/finalizers
   - cephblockpoolradosnamespaces/finalizers
+  - nvmeofosds/finalizers
   verbs: ["update"]
 - apiGroups:
   - policy
