--- a/deploy/examples/crds.yaml
+++ b/deploy/examples/crds.yaml
@@ -13047,6 +13047,72 @@ spec:
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
+  annotations:
+    controller-gen.kubebuilder.io/version: v0.14.0
+  name: nvmeofosds.ceph.rook.io
+spec:
+  group: ceph.rook.io
+  names:
+    kind: NvmeOfOSD
+    listKind: NvmeOfOSDList
+    plural: nvmeofosds
+    singular: nvmeofosd
+  scope: Namespaced
+  versions:
+    - name: v1
+      schema:
+        openAPIV3Schema:
+          description: NvmeOfOSD is the Schema for the nvmeofosds API
+          properties:
+            apiVersion:
+              description: |-
+                APIVersion defines the versioned schema of this representation of an object.
+                Servers should convert recognized schemas to the latest internal value, and
+                may reject unrecognized values.
+                More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources
+              type: string
+            kind:
+              description: |-
+                Kind is a string value representing the REST resource this object represents.
+                Servers may infer this from the endpoint the client submits requests to.
+                Cannot be updated.
+                In CamelCase.
+                More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
+              type: string
+            metadata:
+              type: object
+            spec:
+              description: NvmeOfOSDSpec defines the desired state of NvmeOfOSD
+              properties:
+                attachNode:
+                  type: string
+                device:
+                  type: string
+                nvmeOfStorageName:
+                  type: string
+                vnode:
+                  type: string
+              required:
+                - attachNode
+                - device
+                - nvmeOfStorageName
+                - vnode
+              type: object
+            status:
+              description: NvmeOfOSDStatus defines the observed state of NvmeOfOSD
+              properties:
+                status:
+                  type: string
+              required:
+                - status
+              type: object
+          type: object
+      served: true
+      storage: true
+---
+apiVersion: apiextensions.k8s.io/v1
+kind: CustomResourceDefinition
+metadata:
   name: objectbucketclaims.objectbucket.io
 spec:
   group: objectbucket.io
