--- a/deploy/examples/crds.yaml
+++ b/deploy/examples/crds.yaml
@@ -13048,6 +13048,87 @@ spec:
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
+  annotations:
+    controller-gen.kubebuilder.io/version: v0.14.0
+  name: nvmeofstorages.ceph.rook.io
+spec:
+  group: ceph.rook.io
+  names:
+    kind: NvmeOfStorage
+    listKind: NvmeOfStorageList
+    plural: nvmeofstorages
+    singular: nvmeofstorage
+  scope: Namespaced
+  versions:
+    - name: v1
+      schema:
+        openAPIV3Schema:
+          description: NvmeOfStorage is the Schema for the nvmeofstorages API
+          properties:
+            apiVersion:
+              description: |-
+                APIVersion defines the versioned schema of this representation of an object.
+                Servers should convert recognized schemas to the latest internal value, and
+                may reject unrecognized values.
+                More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources
+              type: string
+            kind:
+              description: |-
+                Kind is a string value representing the REST resource this object represents.
+                Servers may infer this from the endpoint the client submits requests to.
+                Cannot be updated.
+                In CamelCase.
+                More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
+              type: string
+            metadata:
+              type: object
+            spec:
+              properties:
+                devices:
+                  items:
+                    description: FabricDevice represents a fabric device connected to a node
+                    properties:
+                      attachedNode:
+                        type: string
+                      deviceName:
+                        type: string
+                      port:
+                        type: integer
+                      subnqn:
+                        type: string
+                    required:
+                      - attachedNode
+                      - deviceName
+                      - port
+                      - subnqn
+                    type: object
+                  type: array
+                ip:
+                  type: string
+                name:
+                  type: string
+              required:
+                - devices
+                - ip
+                - name
+              type: object
+            status:
+              description: NvmeOfStorageStatus defines the observed state of NvmeOStorage
+              properties:
+                status:
+                  type: string
+              required:
+                - status
+              type: object
+          required:
+            - spec
+          type: object
+      served: true
+      storage: true
+---
+apiVersion: apiextensions.k8s.io/v1
+kind: CustomResourceDefinition
+metadata:
   name: objectbucketclaims.objectbucket.io
 spec:
   group: objectbucket.io
